name:          Laplace-Engine
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.18
copyright: 2020 Tristan Hilbert
license:   MIT
synopsis:  Some Hacked together Haskell

-- Libraries

-- Main Library
library Engine
    exposed-modules: Util, Engine, Systems.Console, Systems.Input, Entities.Actor
    default-language: Haskell2010
    hs-source-dirs: engine, engine/Systems, engine/Entities
    build-depends: base, containers

library ExampleGame
    exposed-modules: ExampleGame
    default-language: Haskell2010
    hs-source-dirs: game
    build-depends: base, Engine

-- Executable Definition
executable Laplace-Engine
    build-depends: base, Engine, ExampleGame
    default-language: Haskell2010
    hs-source-dirs: executable
    main-is: Main.hs

-- Documentation Generation Flag
flag documentation
    default: False

-- Tests Definition
test-suite hspec
    build-depends:    base, containers, Engine, ExampleGame, hspec == 2.7.*, QuickCheck == 2.14.*
    default-language: Haskell2010
    hs-source-dirs:   test-suite
    main-is:          Spec.hs
    type:             exitcode-stdio-1.0